--- a/banking-service-registry/src/main/resources/application.yml
+++ b/banking-service-registry/src/main/resources/application.yml
@@ -11,3 +11,7 @@ eureka:
       defaultZone: http://localhost:8081/eureka
     fetch-registry: false
     register-with-eureka: false
+
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
