--- a/banking-user-service/src/main/resources/application.yml
+++ b/banking-user-service/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
     username: root
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8081/eureka
