updated api gateway with the core banking service

--- a/core-banking-service/src/main/resources/application.yml
+++ b/core-banking-service/src/main/resources/application.yml
@@ -18,6 +18,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8081/eureka
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
 
 info:
   app:
