--- a/banking-user-service/src/main/resources/application.yml
+++ b/banking-user-service/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 server:
   port: 8083
 
+app:
+  config:
+    keycloak:
+      server-url: http://localhost:8080
+      realm: swayam-banking-services
+      clientId: banking-service-api-client
+      client-secret: aRlFZcF5OzFypWnfSPmMN4GnJfVLCur6
+
 spring:
   application:
     name: banking-user-service
@@ -10,7 +18,15 @@ spring:
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  jpa:
+    hibernate:
+      ddl-auto: update
+
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8081/eureka
+
+info:
+  app:
+    name: ${spring.application.name}
