added config server

--- a/core-banking-service/src/main/resources/application.yml
+++ b/core-banking-service/src/main/resources/application.yml
@@ -1,27 +1,3 @@
-server:
-  port: 8092
-
 spring:
   application:
-    name: core-banking-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/bankingdb
-    username: root
-    password: password
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8081/eureka
-  instance:
-    prefer-ip-address: true
-    hostname: localhost
-
-info:
-  app:
-    name: ${spring.application.name}
+    name: core_banking_service
