--- a/banking-api-gateway/pom.xml
+++ b/banking-api-gateway/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 			<version>4.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
