--- a/banking-api-gateway/src/main/resources/application.yml
+++ b/banking-api-gateway/src/main/resources/application.yml
@@ -1,70 +1,3 @@
-app:
-  config:
-    keycloak:
-      url: http://localhost:8080
-      realm: swayam-banking-services
-
 spring:
   application:
-    name: banking-api-gateway
-  cloud:
-    gateway:
-      routes: 
-        - id: banking-user-service
-          uri: lb://banking-user-service
-          predicates:
-            - Path=/user/**
-          filters:
-            - StripPrefix=1
-        - id: core-banking-service
-          uri: lb://core-banking-service
-          predicates:
-            - Path=/banking-core/**
-          filters:
-            - StripPrefix=1
-
-        - id: banking-fund-transfer-service
-          uri: lb://banking-fund-transfer-service
-          predicates:
-            - Path=/fund-transfer/**
-          filters:
-            - StripPrefix=1
-
-        - id: internet-banking-utility-payment-service
-          uri: lb://internet-banking-utility-payment-service
-          predicates:
-            - Path=/utility-payment/**
-          filters:
-            - StripPrefix=1
-  security:
-    oauth2:
-      client:
-        provider:
-          keycloak:
-            token-uri: ${app.config.keycloak.url}/realms/${app.config.keycloak.realm}/protocol/openid-connect/token
-            authorization-uri: ${app.config.keycloak.url}/realms/${app.config.keycloak.realm}/protocol/openid-connect/auth
-            user-name-attribute: preferred_username
-            user-info-uri: ${app.config.keycloak.url}/realms/${app.config.keycloak.realm}/protocol/openid-connect/userinfo
-            jwk-set-uri: ${app.config.keycloak.url}/realms/${app.config.keycloak.realm}/protocol/openid-connect/certs
-            user-info-authentication-method: header
-        registration:
-          internet-banking-core-client:
-            provider: keycloak
-            client-id: banking-service-core-client
-            client-secret: 9qxAawaK17WsOZu5sF3eFF4jpfiAq2Bq
-            authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/keycloak
-            scope: openid
-      resourceserver:
-        jwt:
-          jwk-set-uri: ${app.config.keycloak.url}/realms/${app.config.keycloak.realm}/protocol/openid-connect/certs
-
-server:
-  port: 8082
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8081/eureka
-
-
+    name: banking_api_gateway
