--- a/utility-payment-service/src/main/resources/application.yml
+++ b/utility-payment-service/src/main/resources/application.yml
@@ -1,22 +1,3 @@
-server:
-  port: 8085
-
 spring:
   application:
-    name: utility-payment-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/bankingdb
-    username: root
-    password: password
-    jpa:
-      hibernate:
-        ddl-auto: update
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8081/eureka
-
-info:
-  app:
-    name: ${spring.application.name}
+    name: utility_payment_service
